// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Primary smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-16">
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg ui-button-lg-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary ui-button-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm ui-button-sm-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg ui-button-lg-right-icon"
      >
        Large
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary ui-button-right-icon"
      >
        Regular
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm ui-button-sm-right-icon"
      >
        Small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        Extra small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Button Priority smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-16">
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg ui-button-lg-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority ui-button-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm ui-button-sm-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg ui-button-lg-right-icon"
      >
        Large
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority ui-button-right-icon"
      >
        Regular
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm ui-button-sm-right-icon"
      >
        Small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        Extra small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Button ReactComponent smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-16">
  <div>
    <button class="ui-button-priority-lg">
      Hello React!
    </button>
  </div>
  <div>
    <button class="ui-button-primary ui-button-left-icon">
      <svg class
           style="width: 0.75rem; height: 0.75rem;"
      >
        <use xlink:href="#sprite-icon-gui-magnifying-glass-outline">
        </use>
      </svg>
      Hello React!
    </button>
  </div>
  <div>
    <button class="ui-button-secondary-xs">
      Hello React!
      <svg class
           style="width: 0.75rem; height: 0.75rem;"
      >
        <use xlink:href="#sprite-icon-gui-arrow-long-right-outline">
        </use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Components/Button Secondary smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-16">
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg ui-button-lg-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary ui-button-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm ui-button-sm-left-icon"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-search">
          </use>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg ui-button-lg-right-icon"
      >
        Large
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary ui-button-right-icon"
      >
        Regular
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm ui-button-sm-right-icon"
      >
        Small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        Extra small
        <svg style="width: 1.5rem; height: 1.5rem;">
          <use xlink:href="#sprite-icon-gui-arrow-right">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-16">
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-8 ">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[60px]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;
